--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     position: relative;
+    background: linear-gradient(to bottom, rgba(17, 16, 16, 0.7), rgba(255, 255, 255, 0.3))
    
 }
 
@@ -68,7 +69,7 @@ margin-top: 10px;
     display: flex;
     
     align-items: center;
-    background: linear-gradient(to bottom, rgba(18, 18, 18, 0.7), rgba(255, 255, 255, 0.3)), url('../B9A1-New-Year-New-Mission-main/resources/Vectorrr.png');
+    background: linear-gradient(to bottom, rgba(17, 16, 16, 0.7), rgba(255, 255, 255, 0.3)), url('../B9A1-New-Year-New-Mission-main/resources/Vectorrr.png');
     height: 600px;
     width: 100%;
     background-repeat: no-repeat;
@@ -99,11 +100,36 @@ letter-spacing: 7.04px;
 
     }
     .paragraph-img{
-        width: 40%;
+        width: 60%;
+        margin: 100px auto;
         display: flex;
         align-items: center;
         justify-content: center;
 
     }
+    .adress{
+        background-color:  rgb(255, 231, 234) ;
+         
+        width: 60%;
+     margin: 100px auto;
+  
+        
+        align-items: center;
+        justify-content: center;
+        
+text-align: center;
+font-size: 32px; 
+font-weight: 600;
+line-height: 56px;  
+ }
+    .adress-btn{
+        color: #fffcfc;
+        background-color: #F00;
 
- 
+        text-align: center;
+        padding: 16px 32px;
+        font-size: 20px;
+        font-weight: 700;
+    }
+
+   
